DEV enhanced backend and frontend
Backend is more stable and It was enhanced the exception handling.
Some fix on fronted (message text aling on the left and remove of input bar text once message submit)

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -3,6 +3,7 @@ FROM python:3.9-slim-buster
 WORKDIR /app
 
 COPY ./requirements.txt ./requirements.txt
+COPY ./test.csv ./test.csv
 RUN pip3 install -r requirements.txt
 
 COPY . .
